--- a/extensions/theme-extension/package.json
+++ b/extensions/theme-extension/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "concurrently -r -k -P \"pnpm run shopify:dev {@}\" \"pnpm run vite:dev\" --",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "build": "pnpm run vite:build && pnpm run shopify:build",
     "deploy": "pnpm run vite:build && pnpm run shopify:deploy",
     "vite:dev": "vite",
@@ -31,6 +33,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
