--- a/extensions/theme-extension/package.json
+++ b/extensions/theme-extension/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "concurrently -r -k -P \"pnpm run shopify:dev {@}\" \"pnpm run vite:dev\" --",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --fix --ext ts,tsx",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "build": "pnpm run vite:build && pnpm run shopify:build",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -30,8 +32,14 @@
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prefer-arrow-functions": "^3.3.2",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.0",
     "prettier-plugin-organize-imports": "^3.2.4",
