--- a/extensions/theme-extension/package.json
+++ b/extensions/theme-extension/package.json
@@ -7,6 +7,8 @@
     "dev": "concurrently -r -k -P \"pnpm run shopify:dev {@}\" \"pnpm run vite:dev\" --",
     "build": "pnpm run vite:build && pnpm run shopify:build",
     "deploy": "pnpm run vite:build && pnpm run shopify:deploy",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "vite:dev": "vite",
     "vite:build": "tsc && vite build",
     "shopify": "pnpm exec shopify",
@@ -24,6 +26,8 @@
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.12",
