--- a/extensions/theme-extension/package.json
+++ b/extensions/theme-extension/package.json
@@ -7,6 +7,8 @@
     "dev": "concurrently -r -k -P \"pnpm run shopify:dev {@}\" \"pnpm run vite:dev\" --",
     "build": "pnpm run vite:build && pnpm run shopify:build",
     "deploy": "pnpm run vite:build && pnpm run shopify:deploy",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --fix --ext ts,tsx",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "vite:dev": "vite",
@@ -23,8 +25,12 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.2",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-preact": "^1.4.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.0",
     "prettier-plugin-organize-imports": "^3.2.4",
