--- a/extensions/theme-extension/package.json
+++ b/extensions/theme-extension/package.json
@@ -30,6 +30,11 @@
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prefer-arrow-functions": "^3.3.2",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "eslint-config-preact": "^1.4.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.0",
